Demo usse selenium usse keyboard

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -1311,12 +1311,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "925bfd85f0704cc6be99666be11535b5",
+       "model_id": "38bc4cac18204dcab427e0ab134365df",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Select PDF File', options=('CAG_Baocaothuongnien_2018.pdf', 'ACV_Baocaothuongnien_2019.p…"
+       "Dropdown(description='Select PDF File', options=('CAG_Baocaothuongnien_2018.pdf',), value='CAG_Baocaothuongnie…"
       ]
      },
      "metadata": {},
@@ -1325,7 +1325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc1a812cf7424d519f01a22a599de4ae",
+       "model_id": "862cee754d984acb9846ba30ccbd4fce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1339,7 +1339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "228010f550074341a75840a2e26a3dc8",
+       "model_id": "5ad0ec4263ab46b7b540a4aae8612e49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1353,7 +1353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35604a1c250846da8226cd60b944075f",
+       "model_id": "ec1d83777767476eb0ab7caf69c46839",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1367,7 +1367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12f86c3bb2a84b6e87336e106004132b",
+       "model_id": "7a01a99977284414bb41e3fbcbc7ef0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1381,7 +1381,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13522cc2693443ea8470ae157ef428ad",
+       "model_id": "e20d0d593649487cad3d66460a1f256a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1395,7 +1395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bf9e8b011f14f9a882dae776c4d9166",
+       "model_id": "20b8691aea1341a8bd4173a2ebcd04c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1409,7 +1409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fdcd25258ff49cc88e9a355b20b9020",
+       "model_id": "396b418010014e13aad3037707be6fb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1423,7 +1423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ed94914c6af447ab5ddec0a06c45cd2",
+       "model_id": "3f20a63b85a84d96826f423c84334deb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1437,7 +1437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21791ca90ce445f28d8811d9432252e4",
+       "model_id": "e09499512be34ab08be8f3df06c031b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1482,7 +1482,7 @@
     "    return occurrences\n",
     "\n",
     "# Giao diện tìm kiếm\n",
-    "pdf_files = [\"CAG_Baocaothuongnien_2018.pdf\",\"ACV_Baocaothuongnien_2019.pdf\"]\n",
+    "pdf_files = [\"CAG_Baocaothuongnien_2018.pdf\"]\n",
     "\n",
     "pdf_file_dropdown = widgets.Dropdown(options=pdf_files, description='Select PDF File')\n",
     "keyword_texts = [widgets.Text(description=f'Keyword {i+1}') for i in range(4)]\n",
@@ -1620,7 +1620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1634,7 +1634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
