--- a/Update.ipynb
+++ b/Update.ipynb
@@ -183,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "436e870c5cc54d6493a93dfc8f6d5f33",
+       "model_id": "9f2c6aa77fbf4e84b39133ff35adb7d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5339dcfa965d446abbdcedccc0903f62",
+       "model_id": "615febc5623140d89affac79d5c9b644",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108c456cc0a84d4bb8afb54fd0b7fd72",
+       "model_id": "7f691f3f83b3408789197606b158db04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e494fa7900c40c8a40af9d439e0abd2",
+       "model_id": "f2801cde1b7a40dca73fd31cf5b005ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1881b93f97e349d0ae310a1eeb4df7b1",
+       "model_id": "261cbb8ad9a341949f6bd8fd3c7ca901",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +269,11 @@
     "def count_word_occurrences(file_path, target_words, progress_bar, status_label):\n",
     "    with open(file_path, 'rb') as file:\n",
     "        text = extract_text(file)\n",
-    "\n",
+    "    \n",
+    "    # Loại bỏ các ngắt dòng và giữ lại khoảng trắng\n",
+    "    text = re.sub(r'-\\n', '', text)  # Loại bỏ ngắt dòng khi từ bị nối bằng dấu gạch ngang\n",
+    "    text = re.sub(r'\\n+', ' ', text)  # Thay thế các ngắt dòng liên tục bằng khoảng trắng\n",
+    "    \n",
     "    occurrences = {}\n",
     "    for i, target_word in enumerate(target_words):\n",
     "        progress_bar.value = (i + 1) / len(target_words)\n",
@@ -287,6 +291,8 @@
     "        occurrences[target_word] = count\n",
     "\n",
     "    return occurrences\n",
+    "\n",
+    "\n",
     "\n",
     "# Tự động lấy danh sách file PDF trong thư mục\n",
     "directory_path = \"DemoPDF/\"  \n",
@@ -700,12 +706,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Đoạn code lấy ảnh trong thư mục và dùng google photos"
+    "# Đoạn code lấy ảnh trong thư mục và dùng i2OCR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -718,23 +724,25 @@
    ],
    "source": [
     "import selenium\n",
-    "print(\"Version \" + selenium.__version__)"
+    "print(\"Version \" + selenium.__version__)\n",
+    "\n",
+    "# <span class=\"btn btn-file\"><span class=\"fileupload-new\">Select Image</span><span class=\"fileupload-exists\">Change</span><input type=\"file\" id=\"i2ocr_uploadedfile\" name=\"i2ocr_uploadedfile\"></span>\n",
+    "# <input type=\"submit\" style=\"margin-left:-50px;\" title=\"Perform OCR\" class=\"btn btn-large btn-danger bold space\" id=\"submit_i2ocr\" value=\"Extract Text\">\n",
+    "# <textarea id=\"ocrTextBox\" rows=\"12\" class=\"i2ocr_iTextArea\" style=\"display: inline-block; direction: ltr;\"></textarea>\n",
+    "\n",
+    "# Xpath, //div/span[@class='btn btn-file']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import time\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.chrome.options import Options\n",
-    "import pytesseract\n",
-    "from PIL import Image"
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "import time"
    ]
   },
   {
@@ -743,50 +751,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cấu hình Selenium (đảm bảo đã cài đặt ChromeDriver)\n",
-    "chrome_options = Options()\n",
-    "chrome_options.add_argument(\"--start-maximized\")\n",
-    "chrome_driver_path = \"/path/to/chromedriver\"  # Đường dẫn tới chromedriver\n",
-    "service = Service(chrome_driver_path)\n",
+    "# Demo\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from pynput.keyboard import Key, Controller\n",
+    "import time\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(10)\n",
+    "driver.get(\"https://2ocr.com/online-ocr-vietnamese/\")\n",
+    "driver.find_element(By.XPATH, \"//div[@class='filepicker dropzone filePicker dz-clickable']\").click()\n",
+    "time.sleep(3)\n",
     "\n",
-    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "keyboard = Controller()\n",
+    "keyboard.type(\"E:\\\\NCKHDigital\\\\Photos\\\\BCphotos\\\\0004.jpg\")\n",
+    "keyboard.press(Key.enter)\n",
     "\n",
-    "# Đường dẫn đến ảnh trong thư mục\n",
-    "image_folder = \"/BCphotos/\"\n",
-    "image_files = [os.path.join(image_folder, img) for img in os.listdir(image_folder) if img.endswith(\".jpg\") or img.endswith(\".png\")]\n",
     "\n",
-    "# Đường dẫn lưu file txt\n",
-    "output_txt_file = \"/path/to/output/folder/extracted_texts.txt\"\n",
+    "# driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.i2ocr.com/free-online-vietnamese-ocr\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from pynput.keyboard import Key, Controller\n",
+    "import time\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.implicitly_wait(10)\n",
+    "driver.get(\"https://www.i2ocr.com/free-online-vietnamese-ocr/\")\n",
+    "driver.find_element(By.XPATH, \"//div/span[@class='btn btn-file']\").click()\n",
+    "time.sleep(3)\n",
     "\n",
-    "# Mở trang Google Photos và đăng nhập\n",
-    "driver.get(\"https://photos.google.com\")\n",
-    "time.sleep(5)  # Đợi trang tải xong (cần tối ưu hơn với WebDriverWait)\n",
+    "keyboard = Controller()\n",
+    "keyboard.type(\"E:\\\\NCKHDigital\\\\Photos\\\\BCphotos\\\\0004.jpg\")\n",
+    "keyboard.press(Key.enter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "WebDriverException",
+     "evalue": "Message: unknown error: path is not absolute: ./Photos/BCphotos/0004.jpg\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7B8003AF5+28005]\n\t(No symbol) [0x00007FF7B7F683F0]\n\t(No symbol) [0x00007FF7B7E0580A]\n\t(No symbol) [0x00007FF7B7E1567C]\n\t(No symbol) [0x00007FF7B7E4D4A0]\n\t(No symbol) [0x00007FF7B7E7BA3A]\n\t(No symbol) [0x00007FF7B7E49246]\n\t(No symbol) [0x00007FF7B7E7BC50]\n\t(No symbol) [0x00007FF7B7E9B8B3]\n\t(No symbol) [0x00007FF7B7E7B7E3]\n\t(No symbol) [0x00007FF7B7E475C8]\n\t(No symbol) [0x00007FF7B7E48731]\n\tGetHandleVerifier [0x00007FF7B82F646D+3118813]\n\tGetHandleVerifier [0x00007FF7B8346CC0+3448624]\n\tGetHandleVerifier [0x00007FF7B833CF3D+3408301]\n\tGetHandleVerifier [0x00007FF7B80CA44B+841403]\n\t(No symbol) [0x00007FF7B7F7344F]\n\t(No symbol) [0x00007FF7B7F6F4C4]\n\t(No symbol) [0x00007FF7B7F6F65D]\n\t(No symbol) [0x00007FF7B7F5EBB9]\n\tBaseThreadInitThunk [0x00007FFCBE027374+20]\n\tRtlUserThreadStart [0x00007FFCBE1FCC91+33]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mWebDriverException\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m upload_button \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbtn-file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m file_input \u001b[38;5;241m=\u001b[39m upload_button\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mTAG_NAME, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mfile_input\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_keys\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# 2. Tìm nút \"Extract Text\" và bấm vào\u001b[39;00m\n\u001b[0;32m     16\u001b[0m submit_button \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mID, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubmit_i2ocr\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:231\u001b[0m, in \u001b[0;36mWebElement.send_keys\u001b[1;34m(self, *value)\u001b[0m\n\u001b[0;32m    228\u001b[0m             remote_files\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_upload(file))\n\u001b[0;32m    229\u001b[0m         value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(remote_files))\n\u001b[1;32m--> 231\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    232\u001b[0m \u001b[43m    \u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSEND_KEYS_TO_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeys_to_typing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys_to_typing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\n\u001b[0;32m    233\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:395\u001b[0m, in \u001b[0;36mWebElement._execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    393\u001b[0m     params \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    394\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id\n\u001b[1;32m--> 395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:354\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    352\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 354\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mWebDriverException\u001b[0m: Message: unknown error: path is not absolute: ./Photos/BCphotos/0004.jpg\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7B8003AF5+28005]\n\t(No symbol) [0x00007FF7B7F683F0]\n\t(No symbol) [0x00007FF7B7E0580A]\n\t(No symbol) [0x00007FF7B7E1567C]\n\t(No symbol) [0x00007FF7B7E4D4A0]\n\t(No symbol) [0x00007FF7B7E7BA3A]\n\t(No symbol) [0x00007FF7B7E49246]\n\t(No symbol) [0x00007FF7B7E7BC50]\n\t(No symbol) [0x00007FF7B7E9B8B3]\n\t(No symbol) [0x00007FF7B7E7B7E3]\n\t(No symbol) [0x00007FF7B7E475C8]\n\t(No symbol) [0x00007FF7B7E48731]\n\tGetHandleVerifier [0x00007FF7B82F646D+3118813]\n\tGetHandleVerifier [0x00007FF7B8346CC0+3448624]\n\tGetHandleVerifier [0x00007FF7B833CF3D+3408301]\n\tGetHandleVerifier [0x00007FF7B80CA44B+841403]\n\t(No symbol) [0x00007FF7B7F7344F]\n\t(No symbol) [0x00007FF7B7F6F4C4]\n\t(No symbol) [0x00007FF7B7F6F65D]\n\t(No symbol) [0x00007FF7B7F5EBB9]\n\tBaseThreadInitThunk [0x00007FFCBE027374+20]\n\tRtlUserThreadStart [0x00007FFCBE1FCC91+33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đường dẫn tới ảnh bạn muốn upload và file txt lưu trữ kết quả\n",
+    "image_path = './Photos/BCphotos/0004.jpg'\n",
+    "output_file_path = 'output.txt'\n",
     "\n",
-    "# TODO: Thực hiện đăng nhập (cần thêm mã tự động đăng nhập nếu cần)\n",
+    "# Khởi tạo trình duyệt và truy cập vào trang web\n",
+    "driver = webdriver.Chrome()  # Hoặc ChromeDriver, GeckoDriver tùy thuộc vào trình duyệt\n",
+    "driver.get(\"https://www.i2ocr.com/free-online-vietnamese-ocr\")\n",
     "\n",
-    "# Tải ảnh lên Google Photos\n",
-    "for image_file in image_files:\n",
-    "    upload_button = driver.find_element(By.XPATH, '//*[@aria-label=\"Upload photos or videos\"]')\n",
-    "    upload_button.click()\n",
+    "try:\n",
+    "    # 1. Tìm nút \"Select Image\" và tải ảnh lên\n",
+    "    upload_button = driver.find_element(By.CLASS_NAME, \"btn-file\")\n",
+    "    file_input = upload_button.find_element(By.TAG_NAME, \"input\")\n",
+    "    file_input.send_keys(image_path)\n",
+    "    \n",
+    "    # 2. Tìm nút \"Extract Text\" và bấm vào\n",
+    "    submit_button = driver.find_element(By.ID, \"submit_i2ocr\")\n",
+    "    submit_button.click()\n",
+    "    \n",
+    "    # Chờ để đảm bảo OCR hoàn tất\n",
+    "    time.sleep(10)  # Thời gian có thể thay đổi tùy thuộc vào tốc độ xử lý\n",
+    "    \n",
+    "    # 3. Lấy văn bản từ ô text\n",
+    "    ocr_textbox = driver.find_element(By.ID, \"ocrTextBox\")\n",
+    "    ocr_text = ocr_textbox.get_attribute(\"value\")\n",
+    "    \n",
+    "    # Ghi kết quả vào file .txt\n",
+    "    with open(output_file_path, 'w', encoding='utf-8') as f:\n",
+    "        f.write(ocr_text)\n",
     "\n",
-    "    # Mở hộp thoại tải ảnh\n",
-    "    file_input = driver.find_element(By.XPATH, '//*[@type=\"file\"]')\n",
-    "    file_input.send_keys(image_file)\n",
-    "\n",
-    "    time.sleep(10)  # Đợi ảnh tải xong (có thể tối ưu hóa bằng WebDriverWait)\n",
-    "\n",
-    "# Trích xuất văn bản từ ảnh và lưu vào file txt\n",
-    "with open(output_txt_file, \"w\", encoding=\"utf-8\") as file:\n",
-    "    for image_file in image_files:\n",
-    "        image = Image.open(image_file)\n",
-    "        text = pytesseract.image_to_string(image)\n",
-    "        file.write(f\"Text from {image_file}:\\n\")\n",
-    "        file.write(text)\n",
-    "        file.write(\"\\n\" + \"=\"*50 + \"\\n\")  # Ghi vào file và phân cách giữa các ảnh\n",
-    "        print(f\"Text from {image_file} saved to {output_txt_file}\")\n",
-    "\n",
-    "# Đóng trình duyệt sau khi hoàn tất\n",
-    "driver.quit()\n"
+    "finally:\n",
+    "    # Đóng trình duyệt sau khi hoàn thành\n",
+    "    driver.quit()\n"
    ]
   }
  ],
